<resources>
    <string name="app_name">MovieDemo</string>
    <string name="star">\u2605</string>
    <string name="menu_search">Search</string>
    <string name="search_hint">Enter Movie Name</string>
    <string name="search_label">Search</string>
    <string name="search_description">Search</string>
    <string name="lang_en">English</string>
    <string name="txt_genre">Genre</string>
    <string name="txt_synopsis">Synopsis</string>
    <string name="txt_cast">Cast</string>
    <string name="txt_crew">Crew</string>
    <string name="txt_similar">Similar Videos</string>
</resources>