<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.DetailsActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardDetails"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp">

        <ImageView
            android:id="@+id/imgPosterDetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ContentDescription,VectorDrawableCompat" />

        <ImageView
            android:id="@+id/imgPlay"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:tint="@color/white"
            app:srcCompat="@drawable/ic_baseline_play_circle_outline_24"
            tools:ignore="VectorDrawableCompat" />
    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/cardDetails"
        android:layout_margin="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movieDetailsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/app_name"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movieDetailsReleaseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:ellipsize="end"
                android:lines="1"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/movieDetailsLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/lang_en"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/movieDetailsGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:ellipsize="end"
                android:lines="1"
                android:visibility="gone"
                android:text="@string/txt_genre"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/genreRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/movieDetailsSynopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:ellipsize="end"
                android:text="@string/txt_synopsis"
                android:visibility="gone"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movieDetailsSynopsisInner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:ellipsize="end"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/movieDetailsCast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:ellipsize="end"
                android:text="@string/txt_cast"
                android:visibility="gone"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/castRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/txtCrew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:ellipsize="end"
                android:lines="1"
                android:visibility="gone"
                android:text="@string/txt_crew"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/crewRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/txtSimilarVideos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:ellipsize="end"
                android:lines="1"
                android:visibility="gone"
                android:text="@string/txt_similar"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/videosRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="horizontal" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>